--- a/TechPortal/Views/Products/Index.cshtml
+++ b/TechPortal/Views/Products/Index.cshtml
@@ -3,7 +3,18 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    .Header {
+        font-weight: bold;
+    }
+    table{
+        border-collapse:separate;
+        border-spacing: 50px 0;
+    }
+    td{
+        padding:10px;
+    }
+</style>
 <h2>Product List</h2>
 @if (Model.Count() <= 0)
 {
@@ -11,8 +22,21 @@
 }
 else
 {
-    foreach (var product in Model)
-    {
-        <p>Product: @Html.ActionLink(product.Name,"Edit","Products",new { id = product.ID },null)</p>
-    }
+    <table>
+        <tr>
+            <td class="Header">Product</td>
+            <td class="Header">Stock Level</td>
+            <td class="Header">Unit Price</td>
+            <td class="Header">Category</td>
+        </tr>
+        @foreach (var product in Model)
+        {
+            <tr>
+                <td>@Html.ActionLink(product.Name, "Edit", "Products", new { id = product.ID }, null)</td>
+                <td>@product.StockLevel</td>
+                <td>@product.UnitPrice</td>
+                <td>@product.Category.Name</td>
+            </tr>
+        }
+    </table>
 }
