--- a/TechPortal/Views/Customer/Index.cshtml
+++ b/TechPortal/Views/Customer/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Customer List</h2>
 
+@Html.ActionLink("NEW CUSTOMER", "New", "Customer", null, new { @class = "btn btn-primary" })
+<br/>
 @if (Model.Count() <= 0)
 {
     <p>No Customers Found</p>
@@ -22,6 +24,3 @@ else
 
     }
 }
-
-
-
