--- a/TechPortal/Views/Products/Index.cshtml
+++ b/TechPortal/Views/Products/Index.cshtml
@@ -16,6 +16,7 @@
     }
 </style>
 <h2>Product List</h2>
+@Html.ActionLink("NEW PRODUCT", "ProductForm", "Products", null, new { @class="btn btn-primary"})
 @if (Model.Count() <= 0)
 {
     <p>No Products found</p>
@@ -32,7 +33,7 @@ else
         @foreach (var product in Model)
         {
             <tr>
-                <td>@Html.ActionLink(product.Name, "Edit", "Products", new { id = product.ID }, null)</td>
+                <td>@Html.ActionLink(product.Name, "ProductForm", "Products", new { id = product.ID }, null)</td>
                 <td>@product.StockLevel</td>
                 <td>@product.UnitPrice</td>
                 <td>@product.Category.Name</td>
